# openapi.yaml
@@ -13,7 +13,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/NewUser'
       responses:
         '201':
           description: user created
@@ -23,8 +23,6 @@ paths:
                 $ref: '#/components/schemas/User'
         '400':
           description: request body validation error. check error message in response.
-        '409':
-          description: user id already exists
     get:
       summary: finds users per last and first name
       parameters:
@@ -39,7 +37,7 @@ paths:
           schema:
             $ref: '#/components/schemas/FirstName'
         - in: query
-          name: maxNumUsers
+          name: searchLimit
           description: maximum number of users to find
           schema:
             type: integer
