# src/main/scala/info/quiquedev/userservice/Routes.scala
@@ -8,12 +8,21 @@ import org.http4s._
 import org.http4s.circe._
 import java.time.Instant
 import info.quiquedev.userservice.UserUsecases
+import Dto._
 import Dto.UserDto._
 import Dto.NewUserDto
 import Dto.NewUserDto._
 import info.quiquedev.userservice.Dto.NewUserDtoValidationError
+import Dto.FirstNameDto
+import Dto.LastNameDto
+import io.circe.generic.auto._
+import Dto.SearchLimitDto._
+import org.http4s.dsl.impl.QueryParamDecoderMatcher
+import org.http4s.dsl.impl.OptionalQueryParamDecoderMatcher
 
 object Routes {
+  import Codec._
+
   private def health[F[_]: Sync]: HttpRoutes[F] = {
     val dsl = new Http4sDsl[F] {}
     import dsl._
@@ -40,13 +49,53 @@ object Routes {
           createdUser <- createUser(newUser)
           response <- Created(createdUser.toDto)
         } yield response).recoverWith {
-          case NewUserDtoValidationError(errors) => {
-val e = errors.toList.mkString(",")
-            BadRequest(errors.toList.mkString(","))}
+          case NewUserDtoValidationError(errors) =>
+            BadRequest(errors.toList.mkString(","))
         }
+      case GET -> Root / "users" :? FirstNameDtoParamMatcher(firstNameDto) :? LastNameDtoParamMatcher(
+            lastNameDto
+          ) :? SearchLimitDtoOptionalParamMatcher(searchLimitDto) => {
+        for {
+          searchLimit <- SearchLimitDto.toDomainF(searchLimitDto)
+          firstName <- FirstNameDto.toDomainF(firstNameDto)
+          lastName <- LastNameDto.toDomainF(lastNameDto)
+          users <- findUserByName(firstName, lastName, searchLimit)
+          response <- Ok(users.map(_.toDto))
+        } yield response
+      }
     }
   }
 
   def all[F[_]: Sync: UserUsecases]: HttpRoutes[F] = health <+> users
+}
+
+private object Codec {
+  implicit def userDtoEntityEncoder[F[_]: Sync]: EntityEncoder[F, UserDto] =
+    jsonEncoderOf
+
+  implicit def userDtoListEntityEncoder[F[_]: Sync]
+      : EntityEncoder[F, List[UserDto]] = jsonEncoderOf
+
+  implicit def newUserDtoEntityDecoder[F[_]: Sync]
+      : EntityDecoder[F, NewUserDto] = jsonOf
+
+  implicit val firstNameDtoQueryParamDecoder: QueryParamDecoder[FirstNameDto] =
+    QueryParamDecoder[String].map(FirstNameDto.apply)
+
+  object FirstNameDtoParamMatcher
+      extends QueryParamDecoderMatcher[FirstNameDto]("firstName")
+
+  implicit val lastNameDtoQueryParamDecoder: QueryParamDecoder[LastNameDto] =
+    QueryParamDecoder[String].map(LastNameDto.apply)
+
+  object LastNameDtoParamMatcher
+      extends QueryParamDecoderMatcher[LastNameDto]("lastName")
+
+  implicit val searchLimitDtoOptionalQueryParamDecoder
+      : QueryParamDecoder[SearchLimitDto] =
+    QueryParamDecoder[Int].map(SearchLimitDto.apply)
+
+  object SearchLimitDtoOptionalParamMatcher
+      extends OptionalQueryParamDecoderMatcher[SearchLimitDto]("searchLimit")
 
 }
